[package]
name = "intermodal-rs"
version = "0.0.3"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"
readme = "REDME.md"
description = "Container handling in Rust."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-compression = { version = "0.3.7", features = ["tokio", "gzip"] }
async-trait = "0.1"
hex = "0.4"
bytes = { version = "1"}
chrono = { version = "0.4", features = ["serde"] }
clap = "*"
directories = "3.0"
env_logger = "0.8"
flate2 = { version = "1.0" }
futures = { version = "0.3"}
futures-util = { version = "0.3"}
lazy_static = "1.1"
libc = "0.2"
log = "0.4"
hyper = { version = "0.14.2", features = ["client", "http1", "stream"] }
hyper-tls = { version = "0.5" }
regex = "1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "*"
sha2 = "0.9"
tar = { version = "0.4.33" }
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tokio-util = { version = "0.6", features = ["io"]}
xattr = { version = "0.2" }

[dev-dependencies]
wiremock = { version = "0.5.3"}
tempdir = "*"


[[bin]]
name = "intmod"
path = "src/bin/intmod.rs"
doc = false
