[package]
name = "intermodal-rs"
version = "0.0.4"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

readme = "README.md"
description = "Container handling in Rust."
repository = "https://github.com/gabhijit/intermodal.git"

keywords = ["containers", "docker"]
categories = ["command-line-utilities"]

license-file = "LICENSE"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

async-compression = { version = "0.3.7", features = ["tokio", "gzip"] }
async-trait = "0.1"
hex = "0.4"
bytes = { version = "1"}
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.15", features = ["derive"]}
directories = "4.0"
env_logger = "0.8"
flate2 = { version = "1.0" }
futures-util = { version = "0.3.15"}
lazy_static = "1.1"
libc = "0.2"
log = "0.4"
hyper = { version = "0.14.10", features = ["client", "http1", "stream"] }
hyper-tls = { version = "0.5" }
regex = "1.6.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = { version = "0.4.36" }
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tokio-util = { version = "0.7", features = ["io"]}
xattr = { version = "0.2" }

[dev-dependencies]
wiremock = { version = "0.5"}
tempfile = "3"


[[bin]]
name = "intmod"
path = "src/bin/intmod.rs"
doc = false
